remove unneeded css rules from themes now that the random widget is no longer wrapped inside another widget. #5426

--- a/openscholar/themes/hwpi_vibrant/css/hwpi_vibrant.css
+++ b/openscholar/themes/hwpi_vibrant/css/hwpi_vibrant.css
@@ -455,8 +455,7 @@ ul.primary {
   box-sizing: border-box;
 }
 
-.sidebar .block.block-boxes-os_boxes_rand_widget,
-.front #content-column .block.block-boxes-os_boxes_rand_widget,
+
 .front #content-column .block.block-boxes-os_boxes_columns {
   border: none;
   background: none;
@@ -468,8 +467,7 @@ ul.primary {
   box-sizing: none;
 }
 
-.sidebar .block.block-boxes-os_boxes_rand_widget .block-content:first-child,
-.front #content-column .block.block-boxes-os_boxes_rand_widget .block-content:first-child,
+
 .front #content-column .block.block-boxes-os_boxes_columns .block-content:first-child {
 	border-top:none;
 	padding:0;
@@ -497,11 +495,6 @@ ul.primary {
   padding: 15px;
   border-top: 1px solid #f2f2f2;
 }
-
-.block-boxes-os_boxes_rand_widget h2.block-title {
-	margin-bottom:0;
-}
-
 
 
 .front #content-panels .region-content-top .block-boxes-os_slideshow_box .block-content {
